tests/sparql/test_suites/internal/ill-typed/good_queries/database/integer.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :integer ?o
}
ORDER BY ?s
